# autopen

./: .gitmodules  CMakeLists.txt  README.md  autopen.project  autopen.sln  autopen.vcxproj  autopen.vcxproj.filters  autopen.workspace  editor.cpp  editor.h  llama.cpp  llama.patch  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  tokentree.cpp  tokentree.h  vcpkg.json
.github/workflows/: windows.yml
data/: stylesheet.css
